--- a/sftp-config.json
+++ b/sftp-config.json
@@ -34,7 +34,7 @@
     //"keepalive": 120,
     //"ftp_passive_mode": true,
     //"ftp_obey_passive_host": false,
-    "ssh_key_file": "C:/EX_Repos/AWS-Instance_login/odoo8.ppk",
+    "ssh_key_file": "/home/acastro/Ex_Repos/AWS_instance_login/Odoo8.pem",
     //"sftp_flags": ["-F", "/path/to/ssh_config"],
     
     //"preserve_modification_times": false,
